# django_starter

./: .gitignore  README.md  local.yml  production.yml  pyproject.toml
.github/workflows/: ci.yml
backend/base/: admin.py  exceptions.py  filters.py  models.py  paginators.py  tasks.py  urls.py  views.py
backend/base/migrations/: 0001_initial.py
backend/base/tests/: factories.py  test_exceptions.py  test_models.py  test_tasks.py  test_views.py
backend/core/: celery.py  ckeditor5.py  ckeditor_upload.py  custom_urls.py  jwt.py  urls.py  wsgi.py
backend/core/settings/: base.py  localtest.py  production.py  settings.py
backend/templates/: base_mail.html
backend/templates/mails/: otp.html
backend/users/: adapters.py  admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: factories.py  test_models.py  test_serializer_login.py  test_serializers.py  test_tasks.py  test_utils.py  test_views.py
compose/local/django/: Dockerfile  celery_start  formatcode  start
compose/production/django/: Dockerfile  celery_beat  celery_start  entrypoint  start
compose/production/nginx/: Dockerfile  entrypoint.sh  nginx.conf  readme.md
compose/production/postgres/: Dockerfile
compose/production/postgres/maintenance/: backup  backups  readme.md  restore
envs/local/: django  postgres
envs/production/: config  keys  readme.md
